cpu_sources = [
           'access.cc',
           'access2.cc',
           'aes.cc',
           'arith8.cc',
           'arith16.cc',
           'arith32.cc',
           'arith64.cc',
           'bcd.cc',
           'bit.cc',
           'bit16.cc',
           'bit32.cc',
           'bit64.cc',
           'bmi32.cc',
           'bmi64.cc',
           'call_far.cc',
           'crc32.cc',
           'ctrl_xfer16.cc',
           'ctrl_xfer32.cc',
           'ctrl_xfer64.cc',
           'ctrl_xfer_pro.cc',
           'cpu.cc',
           'cpuid.cc',
           'crregs.cc',
           'data_xfer8.cc',
           'data_xfer16.cc',
           'data_xfer32.cc',
           'data_xfer64.cc',
           'decoder/disasm.cc',
           'debugstuff.cc',
           'decoder/fetchdecode32.cc',
           'decoder/fetchdecode64.cc',
           'event.cc',
           'exception.cc',
           'flag_ctrl.cc',
           'flag_ctrl_pro.cc',
           'fpu_emu.cc',
           'generic_cpuid.cc',
           'gf2.cc',
           'icache.cc',
           'init.cc',
           'jmp_far.cc',
           'io.cc',
           'iret.cc',
           'logical8.cc',
           'logical16.cc',
           'logical32.cc',
           'logical64.cc',
           'load.cc',
           'logical8.cc',
           'logical16.cc',
           'logical32.cc',
           'logical64.cc',
           'mmx.cc',
           'msr.cc',
           'mult8.cc',
           'mult16.cc',
           'mult32.cc',
           'mult64.cc',
           'mwait.cc',
           'paging.cc',
           'proc_ctrl.cc',
           'protect_ctrl.cc',
           'rdrand.cc',
           'ret_far.cc',
           'segment_ctrl.cc',
           'segment_ctrl_pro.cc',
           'sha.cc',
           'shift8.cc',
           'shift16.cc',
           'shift32.cc',
           'shift64.cc',
           'smm.cc',
           'soft_int.cc',
           'sse.cc',
           'sse_move.cc',
           'sse_pfp.cc',
           'sse_rcp.cc',
           'sse_string.cc',
           'stack.cc',
           'stack16.cc',
           'stack32.cc',
           'stack64.cc',
           'string.cc',
           'tasking.cc',
           'vm8086.cc',
           'wide_int.cc',
           'xsave.cc']

cpu_library = static_library('cpu',
                        cpu_sources,
                        include_directories: incdir)

